--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ streamlit==1.20.0
 opencv-python==4.7.0.72
 numpy==1.23.5
 Pillow==9.3.0
-torch==1.13.1
+torch==2.1.0
 ultralytics==8.0.54
+setuptools
